Signed-off-by: miss127 <707657572@qq.com>

--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "fphch0102": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "fphch0102"
+    }
+  },
+  "defaultProject": "fphch0102",
+  "cli": {
+    "analytics": "89f00928-bf1a-40b0-90df-7111171421e7"
+  }
 }
